logs/dag_id=e-t-l/run_id=manual__2022-06-17T200750.274004+0000/task_id=load/attempt=1.log
[2022-06-17 20:08:27,363] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: e-t-l.load manual__2022-06-17T20:07:50.274004+00:00 [queued]>
[2022-06-17 20:08:27,434] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: e-t-l.load manual__2022-06-17T20:07:50.274004+00:00 [queued]>
[2022-06-17 20:08:27,436] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-06-17 20:08:27,439] {taskinstance.py:1357} INFO - Starting attempt 1 of 1
[2022-06-17 20:08:27,440] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-06-17 20:08:27,564] {taskinstance.py:1377} INFO - Executing <Task(PythonOperator): load> on 2022-06-17 20:07:50.274004+00:00
[2022-06-17 20:08:27,584] {standard_task_runner.py:52} INFO - Started process 20598 to run task
[2022-06-17 20:08:27,599] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'e-t-l', 'load', 'manual__2022-06-17T20:07:50.274004+00:00', '--job-id', '587', '--raw', '--subdir', 'DAGS_FOLDER/new-new.py', '--cfg-path', '/tmp/tmpmrvqtil4', '--error-file', '/tmp/tmpe_oobgd3']
[2022-06-17 20:08:27,619] {standard_task_runner.py:80} INFO - Job 587: Subtask load
[2022-06-17 20:08:28,199] {task_command.py:370} INFO - Running <TaskInstance: e-t-l.load manual__2022-06-17T20:07:50.274004+00:00 [running]> on host fe209149cfc1
[2022-06-17 20:08:28,918] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=e-t-l
AIRFLOW_CTX_TASK_ID=load
AIRFLOW_CTX_EXECUTION_DATE=2022-06-17T20:07:50.274004+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-06-17T20:07:50.274004+00:00
[2022-06-17 20:08:29,034] {base.py:68} INFO - Using connection ID 'postgres_conn' for task execution.
[2022-06-17 20:08:29,134] {logging_mixin.py:115} INFO - [{'STX_ID': 2345678, 'STORE_NAME': 'Mağaza1', 'PAID_PRICE': 100.3, 'TRX_STATUS': 1, 'STORE_STATUS': 0.0, 'STORE_LIVE_DATE': '2021-03-01 00:00:00', 'SALES_CREATE_DATE': '2021-03-05 00:00:00'}, {'STX_ID': 2345679, 'STORE_NAME': 'Mağaza1', 'PAID_PRICE': 100.3, 'TRX_STATUS': 1, 'STORE_STATUS': 0.0, 'STORE_LIVE_DATE': '2021-03-01 00:00:00', 'SALES_CREATE_DATE': '2021-03-05 00:00:00'}, {'STX_ID': 2345680, 'STORE_NAME': 'Mağaza1', 'PAID_PRICE': 100.3, 'TRX_STATUS': 0, 'STORE_STATUS': 0.0, 'STORE_LIVE_DATE': '2021-03-01 00:00:00', 'SALES_CREATE_DATE': '2021-03-05 00:00:00'}, {'STX_ID': 2345681, 'STORE_NAME': 'Mağaza2', 'PAID_PRICE': 100.3, 'TRX_STATUS': 0, 'STORE_STATUS': 0.0, 'STORE_LIVE_DATE': '2021-03-01 00:00:00', 'SALES_CREATE_DATE': '2021-04-05 00:00:00'}, {'STX_ID': 2345682, 'STORE_NAME': 'Mağaza3', 'PAID_PRICE': 200.3, 'TRX_STATUS': 0, 'STORE_STATUS': 0.0, 'STORE_LIVE_DATE': '2021-03-01 00:00:00', 'SALES_CREATE_DATE': '2021-05-05 00:00:00'}, {'STX_ID': 2345683, 'STORE_NAME': 'Mağaza4', 'PAID_PRICE': 28.3, 'TRX_STATUS': 1, 'STORE_STATUS': 0.0, 'STORE_LIVE_DATE': '2021-03-01 00:00:00', 'SALES_CREATE_DATE': '2021-06-05 00:00:00'}, {'STX_ID': 2345684, 'STORE_NAME': 'Mağaza5', 'PAID_PRICE': 100.3, 'TRX_STATUS': 0, 'STORE_STATUS': 0.0, 'STORE_LIVE_DATE': '2021-04-01 00:00:00', 'SALES_CREATE_DATE': '2021-03-05 00:00:00'}, {'STX_ID': 2345685, 'STORE_NAME': 'Mağaza6', 'PAID_PRICE': 79.3, 'TRX_STATUS': 1, 'STORE_STATUS': 0.0, 'STORE_LIVE_DATE': '2021-04-01 00:00:00', 'SALES_CREATE_DATE': '2021-07-05 00:00:00'}, {'STX_ID': 2345686, 'STORE_NAME': 'Mağaza7', 'PAID_PRICE': 256.3, 'TRX_STATUS': 1, 'STORE_STATUS': 0.0, 'STORE_LIVE_DATE': '2021-04-01 00:00:00', 'SALES_CREATE_DATE': '2021-03-05 00:00:00'}, {'STX_ID': 2345687, 'STORE_NAME': 'Mağaza8', 'PAID_PRICE': 456.3, 'TRX_STATUS': 1, 'STORE_STATUS': 0.0, 'STORE_LIVE_DATE': '2021-04-01 00:00:00', 'SALES_CREATE_DATE': '2021-08-05 00:00:00'}, {'STX_ID': 2345688, 'STORE_NAME': 'Mağaza9', 'PAID_PRICE': 432.3, 'TRX_STATUS': 1, 'STORE_STATUS': 0.0, 'STORE_LIVE_DATE': '2021-05-01 00:00:00', 'SALES_CREATE_DATE': '2021-07-05 00:00:00'}, {'STX_ID': 2345689, 'STORE_NAME': 'Mağaza10', 'PAID_PRICE': 75.3, 'TRX_STATUS': 0, 'STORE_STATUS': 0.0, 'STORE_LIVE_DATE': '2021-05-01 00:00:00', 'SALES_CREATE_DATE': '2021-03-05 00:00:00'}, {'STX_ID': 2345690, 'STORE_NAME': 'Mağaza2', 'PAID_PRICE': 100.3, 'TRX_STATUS': 1, 'STORE_STATUS': 0.0, 'STORE_LIVE_DATE': '2021-05-01 00:00:00', 'SALES_CREATE_DATE': '2021-09-05 00:00:00'}, {'STX_ID': 2345691, 'STORE_NAME': 'Mağaza4', 'PAID_PRICE': 36.3, 'TRX_STATUS': 1, 'STORE_STATUS': 0.0, 'STORE_LIVE_DATE': '2021-05-01 00:00:00', 'SALES_CREATE_DATE': '2021-02-05 00:00:00'}, {'STX_ID': 2345692, 'STORE_NAME': None, 'PAID_PRICE': nan, 'TRX_STATUS': 0, 'STORE_STATUS': nan, 'STORE_LIVE_DATE': None, 'SALES_CREATE_DATE': None}, {'STX_ID': 2345693, 'STORE_NAME': 'Mağaza1', 'PAID_PRICE': 100.3, 'TRX_STATUS': 1, 'STORE_STATUS': 0.0, 'STORE_LIVE_DATE': '2021-03-01 00:00:00', 'SALES_CREATE_DATE': '2021-03-05 00:00:00'}, {'STX_ID': 2345694, 'STORE_NAME': None, 'PAID_PRICE': nan, 'TRX_STATUS': 1, 'STORE_STATUS': nan, 'STORE_LIVE_DATE': None, 'SALES_CREATE_DATE': None}, {'STX_ID': 2345695, 'STORE_NAME': None, 'PAID_PRICE': 75.3, 'TRX_STATUS': 1, 'STORE_STATUS': nan, 'STORE_LIVE_DATE': None, 'SALES_CREATE_DATE': '2021-03-05 00:00:00'}, {'STX_ID': 2345696, 'STORE_NAME': None, 'PAID_PRICE': nan, 'TRX_STATUS': 0, 'STORE_STATUS': nan, 'STORE_LIVE_DATE': None, 'SALES_CREATE_DATE': None}, {'STX_ID': 2345697, 'STORE_NAME': None, 'PAID_PRICE': nan, 'TRX_STATUS': 0, 'STORE_STATUS': nan, 'STORE_LIVE_DATE': None, 'SALES_CREATE_DATE': None}, {'STX_ID': 2345698, 'STORE_NAME': None, 'PAID_PRICE': nan, 'TRX_STATUS': 1, 'STORE_STATUS': nan, 'STORE_LIVE_DATE': None, 'SALES_CREATE_DATE': None}, {'STX_ID': 2345699, 'STORE_NAME': None, 'PAID_PRICE': 100.3, 'TRX_STATUS': 1, 'STORE_STATUS': nan, 'STORE_LIVE_DATE': None, 'SALES_CREATE_DATE': '2021-03-05 00:00:00'}, {'STX_ID': 2345700, 'STORE_NAME': None, 'PAID_PRICE': nan, 'TRX_STATUS': 0, 'STORE_STATUS': nan, 'STORE_LIVE_DATE': None, 'SALES_CREATE_DATE': None}, {'STX_ID': 2345701, 'STORE_NAME': None, 'PAID_PRICE': 100.3, 'TRX_STATUS': 1, 'STORE_STATUS': nan, 'STORE_LIVE_DATE': None, 'SALES_CREATE_DATE': '2021-03-05 00:00:00'}, {'STX_ID': 2345702, 'STORE_NAME': None, 'PAID_PRICE': nan, 'TRX_STATUS': 1, 'STORE_STATUS': nan, 'STORE_LIVE_DATE': None, 'SALES_CREATE_DATE': None}, {'STX_ID': 2345703, 'STORE_NAME': None, 'PAID_PRICE': nan, 'TRX_STATUS': 1, 'STORE_STATUS': nan, 'STORE_LIVE_DATE': None, 'SALES_CREATE_DATE': None}, {'STX_ID': 2345704, 'STORE_NAME': None, 'PAID_PRICE': 100.3, 'TRX_STATUS': 0, 'STORE_STATUS': nan, 'STORE_LIVE_DATE': None, 'SALES_CREATE_DATE': '2021-03-05 00:00:00'}, {'STX_ID': 2345705, 'STORE_NAME': None, 'PAID_PRICE': nan, 'TRX_STATUS': 0, 'STORE_STATUS': nan, 'STORE_LIVE_DATE': None, 'SALES_CREATE_DATE': None}, {'STX_ID': 2345706, 'STORE_NAME': None, 'PAID_PRICE': nan, 'TRX_STATUS': 0, 'STORE_STATUS': nan, 'STORE_LIVE_DATE': None, 'SALES_CREATE_DATE': None}]
[2022-06-17 20:08:29,144] {logging_mixin.py:115} INFO - INSERT INTO  Store_Sales (STX_ID,STORE_NAME,PAID_PRICE,TRX_STATUS,STORE_STATUS,STORE_LIVE_DATE,SALES_CREATE_DATE) VALUES (2345678,'Mağaza1',100.3,1,0.0,'2021-03-01 00:00:00','2021-03-05 00:00:00')
[2022-06-17 20:08:29,204] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 171, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 189, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/new-new.py", line 61, in load_data
    target_db_cursor.execute(sql, tuple(i.values()))
psycopg2.errors.SyntaxError: syntax error at or near "Mağaza1"
LINE 1: ...RE_LIVE_DATE,SALES_CREATE_DATE) VALUES (2345678,''Mağaza1'',...
                                                             ^

[2022-06-17 20:08:29,381] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=e-t-l, task_id=load, execution_date=20220617T200750, start_date=20220617T200827, end_date=20220617T200829
[2022-06-17 20:08:29,604] {standard_task_runner.py:97} ERROR - Failed to execute job 587 for task load (syntax error at or near "Mağaza1"
LINE 1: ...RE_LIVE_DATE,SALES_CREATE_DATE) VALUES (2345678,''Mağaza1'',...
                                                             ^
; 20598)
[2022-06-17 20:08:29,708] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-06-17 20:08:30,136] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
